[package]
name = "ringlink-identity"
description = "implementation of RingLink identity"
authors = ["boot <boot@ring.link>"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
base64 = "0.22.1"
thiserror = "2.0.6"

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.68" }

[dev-dependencies]
serde_json = "1.0.133"
